--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   
   button {
     padding: 12px;
-    background-color: #04182d;
+    background-color: #213d5b;
     color: white;
     border: none;
     border-radius: 4px;
@@ -56,7 +56,7 @@ body {
   }
   
   button:hover {
-    background-color: #092849;
+    background-color: #1f3247;
   }
   
   p {
@@ -86,7 +86,7 @@ body {
     }
   
     h2 {
-      font-size: 30px;
+      font-size: 24px;
     }
   
     input, button {
